added bootstrap on HTML, changed color and fixed media query

--- a/index.html
+++ b/index.html
@@ -10,52 +10,43 @@
 </head>
 
 <body>
-    <!--Navation bar-->
-    <nav class="navbar">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <nav>
         <ul>
-            <li><a href="#about">About Me</a></li>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#work">My Work</a></li>
-            <li><a href="#contact">Contact</a></li>
-
+            <li><a href="#about">about me</a></li>
+            <li><a href="#home">home</a></li>
+            <li><a href="#work">my work</a></li>
+            <li><a href="#contact">contact</a></li>
         </ul>
     </nav>
-
     <section>
-        <!--Introductions-->
-        <section class="home" id=home>
-            <div class="main">
-                    <h1 class="heading">I'M <br>Kushal Khattri</br></h1>
-            </div>
-            <div class="pits">
+        <h1 class="heading">I'M <br>Kushal Khattri</br></h1>
+        <img class="pit" src="./assets/images/255521605_419410799790032_3265997880915428363_n.jpg"
+            alt="I think this is model">
+    </section>
 
-                    <img class="pit" src="./assets/images/255521605_419410799790032_3265997880915428363_n.jpg"
-                        alt="I think this is model">
-            </div>
+    <!--About Me-->
+    <section>
+        <h2 class="me">About Me</h2>
+        <img class="pics" src="./assets/images/255793620_428354425585995_7187796871330786269_n.jpg"
+            alt="trying to be model ">
+        <div class="intro">
+            <p class="par">I am a person that is positive in all aspects of life. I like playing soccer and
+                video games. Currently learning coding.</p>
+        </div>
+    </section>
+    <!--My Projects -->
+    <section class="work" id="work">
 
-        </section>
-        <!--About Me-->
-        <section class="about" id="about">
-            <div class="pic">
-                <h2 class="me">About Me</h2>
-                <img class="pics" src="./assets/images/255793620_428354425585995_7187796871330786269_n.jpg"
-                    alt="trying to be model ">
-                <div class="intro">
-                    <p class="par">I am a person that is positive in all aspects of life. I like playing soccer and
-                        video games. Currently learning coding.</p>
-                </div>
-        </section>
-        <!--My Projects -->
-        <section class="work" id="work">
+        <h2 class="works">My Work</h2>
 
-            <h2 class="works">My Work</h2>
-
-            <div class="pro">
-
+        <div class="pro">
+            <div>
                 <a href="#" class="pros">
                     <img src="./assets/images/screenshot.png" alt="horiseon project">
                 </a>
-
+            </div>
+            <div>
                 <a href="#" class="pros">
                     <img src="./assets/images/Fortnite_blog_season-5_BR05_Social_-Launch_Hero-Line-Up-1920x1080-2117b3d382b87887271a17a78122b7316ff0c1c0.jpg"
                         alt="horiseon project">
@@ -65,32 +56,30 @@
                     <img src="./assets/images/EGS_VALORANT_RiotGames_S1_2560x1440-c0299dc8769c6a944610e56e22fa89d9.jfif"
                         alt="horiseon project">
                 </a>
-
             </div>
+        </div>
 
 
+    </section>
+
+    <!--Contact Info to reach me-->
+    <section class="contact" id="contact">
+        <h2>Contact</h2>
+        <div id="contacts">
+            <a href="mailto:Kushalcool06@gmail.com" class="icon"><img src="./assets/images/email.png"
+                    alt="email logo"></a>
+            <a href="https://github.com/kingkushal11" class="icon"><img src="./assets/images/github.png"
+                    alt="github logo"></a>
+            <a href="https://www.instagram.com/kushalk11/" class="icon"> <img src="./assets/images/instagram.png"
+                    alt="Instagram logo"></a>
+        </div>
+    </section>
+
+    <!--My Footer-->
+    <footer>
+        <section class="footer">
+            <p>@King Kushal</p>
         </section>
-        <!--Contact Info to reach me-->
-        <section class="contact" id="contact">
-            <h2>Contact</h2>
-            <div id="contacts">
-                <a href="mailto:Kushalcool06@gmail.com" class="con"><img src="./assets/images/email.png"
-                        alt="email logo"></a> |
-                <a href="https://github.com/kingkushal11" class="con"><img src="./assets/images/github.png"
-                        alt="github logo"></a> |
-                <a href="https://www.instagram.com/kushalk11/" class="con"> <img src="./assets/images/instagram.png"
-                        alt="Instagram logo"></a>
-            </div>
-        </section>
-
-        <!--My footer-->
-        <footer>
-            <section class="footer">
-                <p>@King Kushal</p>
-            </section>
-
-        </footer>
-
+    </footer>
 </body>
-
 </html>
