added linkedin link and resume

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/style.css">
     <title>King's Portfolio </title>
 </head>
 
 <body>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+
     <nav>
         <ul>
             <li><a href="#about">about me</a></li>
@@ -72,6 +73,9 @@
                     alt="github logo"></a>
             <a href="https://www.instagram.com/kushalk11/" class="icon"> <img src="./assets/images/instagram.png"
                     alt="Instagram logo"></a>
+            <a href="https://www.linkedin.com/in/kushal-khattri-540627224/" class="icon"><img
+                    src="./assets/images/linkedin-black-icon-logo-ECC426C572-seeklogo.com.png" alt="linkedin Logo"></a>
+
         </div>
     </section>
 
@@ -82,4 +86,5 @@
         </section>
     </footer>
 </body>
+
 </html>
