--- a/index.html
+++ b/index.html
@@ -42,22 +42,38 @@
 
         <h2 class="works">My Work</h2>
 
-        <div class="pro">
+        <div class="pro project">
             <div>
                 <a href="#" class="pros">
-                    <img src="./assets/images/screenshot.png" alt="horiseon project">
+                    <img src="./assets/images/moodypage1.png" alt="Moody-Moovies-and-Foodies">
                 </a>
+                <div class="intros">
+                    <h3>Moody Moovies and Foodies</h3>
+                    <a class="link" href="https://github.com/JLee3883/Moody-Moovies-and-Foodies">Github Link</a>
+                    <a class="link" href="https://jlee3883.github.io/Moody-Moovies-and-Foodies/">Deployed Link</a>
+                </div>
             </div>
             <div>
                 <a href="#" class="pros">
-                    <img src="./assets/images/Fortnite_blog_season-5_BR05_Social_-Launch_Hero-Line-Up-1920x1080-2117b3d382b87887271a17a78122b7316ff0c1c0.jpg"
-                        alt="horiseon project">
+                    <img src="./assets/images/_C__Users_kusha_Desktop_homework_Day-Scheduler_index.html.png"
+                        alt="Day Scheduler">
                 </a>
-
+                <div class="intros">
+                    <h3>Day Scheduler</h3>
+                    <a class="link" href="https://github.com/kingkushal11/Day-Scheduler">Github Link</a>
+                    <a class="link" href="https://kingkushal11.github.io/Day-Scheduler/">Deployed Link</a>
+                </div>
+            </div>
+            <div>
                 <a href="#" class="pros">
-                    <img src="./assets/images/EGS_VALORANT_RiotGames_S1_2560x1440-c0299dc8769c6a944610e56e22fa89d9.jfif"
-                        alt="horiseon project">
+                    <img src="./assets/images/_C__Users_kusha_Desktop_homework_Password-Generator_index.html.png"
+                        alt="Password Generator">
                 </a>
+                <div class="intros">
+                    <h3>Password Generator</h3>
+                    <a class="link" href="https://github.com/kingkushal11/-Password-Generator-">Github Link</a>
+                    <a class="link" href="https://kingkushal11.github.io/-Password-Generator-/">Deployed Link</a>
+                </div>
             </div>
         </div>
 
