fixed my readme

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2 class="works">My Work</h2>
 
         <div class="pro project">
-            <div>
+            <div class="child">
                 <a href="#" class="pros">
                     <img src="./assets/images/moodypage1.png" alt="Moody-Moovies-and-Foodies">
                 </a>
@@ -53,7 +53,7 @@
                     <a class="link" href="https://jlee3883.github.io/Moody-Moovies-and-Foodies/">Deployed Link</a>
                 </div>
             </div>
-            <div>
+            <div class="child">
                 <a href="#" class="pros">
                     <img src="./assets/images/_C__Users_kusha_Desktop_homework_Day-Scheduler_index.html.png"
                         alt="Day Scheduler">
@@ -64,7 +64,7 @@
                     <a class="link" href="https://kingkushal11.github.io/Day-Scheduler/">Deployed Link</a>
                 </div>
             </div>
-            <div>
+            <div class="child">
                 <a href="#" class="pros">
                     <img src="./assets/images/_C__Users_kusha_Desktop_homework_Password-Generator_index.html.png"
                         alt="Password Generator">
