--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="child">
                 <a href="#" class="pros">
-                    <img src="./assets/images/_C__Users_kusha_Desktop_homework_Day-Scheduler_index.html.png"
+                    <img src="./assets/images/Day_Scheduler.png"
                         alt="Day Scheduler">
                 </a>
                 <div class="intros">
@@ -66,7 +66,7 @@
             </div>
             <div class="child">
                 <a href="#" class="pros">
-                    <img src="./assets/images/_C__Users_kusha_Desktop_homework_Password-Generator_index.html.png"
+                    <img src="./assets/images/Password_generator.png"
                         alt="Password Generator">
                 </a>
                 <div class="intros">
