fixed my resume link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href="#home">home</a></li>
             <li><a href="#work">my work</a></li>
             <li><a href="#contact">contact</a></li>
-            <li><a href="https://github.com/kingkushal11/King-s-Portfolio/raw/main/assets/My%20Resume.pdf">Resume</a></li>
+            <li><a href="https://github.com/kingkushal11/King-s-Portfolio/raw/main/assets/MyResume.pdf">Resume</a></li>
         </ul>
     </nav>
     <section>
