added link to resume

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
             <li><a href="#home">home</a></li>
             <li><a href="#work">my work</a></li>
             <li><a href="#contact">contact</a></li>
-            <li><a href="https://github.com/kingkushal11/King-s-Portfolio/raw/main/assets/MyResume.pdf">Resume</a></li>
+            <li><a
+                    href="https://github.com/kingkushal11/King-s-Portfolio/raw/main/assets/Kushal%20Resume.pdf">Resume</a>
+            </li>
         </ul>
     </nav>
     <section>
@@ -55,8 +57,7 @@
             </div>
             <div class="child">
                 <a href="#" class="pros">
-                    <img src="./assets/images/Day_Scheduler.png"
-                        alt="Day Scheduler">
+                    <img src="./assets/images/Day_Scheduler.png" alt="Day Scheduler">
                 </a>
                 <div class="intros">
                     <h3>Day Scheduler</h3>
@@ -66,8 +67,7 @@
             </div>
             <div class="child">
                 <a href="#" class="pros">
-                    <img src="./assets/images/Password_generator.png"
-                        alt="Password Generator">
+                    <img src="./assets/images/Password_generator.png" alt="Password Generator">
                 </a>
                 <div class="intros">
                     <h3>Password Generator</h3>
